--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-11">
-                    <img src="img/Layout.png" class="shadow-sm d-lg-none" />
-                    <img src="img/Layout-lg.png" class="shadow-sm d-none d-lg-block" />
+                    <img src="img5/Layout.png" class="shadow-sm d-lg-none" />
+                    <img src="img5/Layoutg-lg.png" class="shadow-sm d-none d-lg-block" />
                 </div>
             </div>
         </div>
